--- a/ansible/inventory/inventory.ini
+++ b/ansible/inventory/inventory.ini
@@ -1,29 +1,24 @@
-# Ansible Inventory for Raspberry Pi k3s + Longhorn Cluster
-# Multi-controller setup with etcd backend
-
 [controllers]
 rpi5-0 ansible_host=10.100.20.10
 rpi5-1 ansible_host=10.100.20.11
 rpi4-0 ansible_host=10.100.20.12
 
-[longhorn_storage]
+[agents]
 rpi3-0 ansible_host=10.100.20.13
 
 [rpi:children]
 controllers
-longhorn_storage
+agents
 
 [storage:children]
 controllers
-longhorn_storage
+agents
 
-[controllers:vars]
-ansible_user=alex
-ansible_ssh_private_key_file=~/.ssh/alex_id_ed25519
-ansible_ssh_common_args='-o StrictHostKeyChecking=no'
-ansible_python_interpreter=/usr/bin/python3
+# Use an underscore (avoid hyphen) and list hosts here (not under :children)
+[storage_only]
+rpi3-0
 
-[longhorn_storage:vars]
+[all:vars]
 ansible_user=alex
 ansible_ssh_private_key_file=~/.ssh/alex_id_ed25519
 ansible_ssh_common_args='-o StrictHostKeyChecking=no'
