--- a/ansible/all.yml
+++ b/ansible/all.yml
@@ -7,18 +7,18 @@
   import_playbook: playbooks/infrastructure/setup-rpi.yml
   tags: [bootstrap, rpi, network, longhorn, common, dns, packages, iscsi]
 
-- name: Setup k3s Multi-Controller Cluster with etcd
-  import_playbook: playbooks/infrastructure/k3s-controller.yml
-  tags: [k3s, etcd, controllers, install]
-
-- name: Setup k3s Worker Nodes
-  import_playbook: playbooks/infrastructure/k3s-worker.yml
-  tags: [k3s, workers, install]
-
 - name: Setup Longhorn Storage Node
   import_playbook: playbooks/infrastructure/longhorn-storage.yml
   tags: [k3s, longhorn, storage, install]
 
+- name: Setup k3s Multi-Controller Cluster with etcd
+  import_playbook: playbooks/infrastructure/k3s-controller.yml
+  tags: [k3s, etcd, controllers, install]
+
+- name: Setup k3s Agent Nodes
+  import_playbook: playbooks/infrastructure/k3s-agent.yml
+  tags: [k3s, agents, install]
+
 - name: Post-K3s Setup
-  import_playbook: playbooks/applications/post-k3s-setup.yml
-  tags: [k3s, post-setup, applications]
+  import_playbook: playbooks/infrastructure/post-k3s.yml
+  tags: [k3s, install, post-setup]
