--- a/ansible/playbooks/infrastructure/k3s-controller.yml
+++ b/ansible/playbooks/infrastructure/k3s-controller.yml
@@ -50,12 +50,6 @@
       register: k3s_running
       ignore_errors: yes
 
-    - name: Skip installation if cluster exists and replacement not requested
-      debug:
-        msg: "Existing k3s cluster detected. Skipping installation. Use -e replace_cluster=true to replace."
-      when: etcd_exists.stat.exists and not (replace_cluster_bool)
-      tags: [k3s, protection]
-
     - name: Set k3s token from environment variable
       set_fact:
         k3s_token: "{{ ansible_env.K3S_TOKEN }}"
@@ -103,58 +97,6 @@
         - existing_token.stdout != k3s_token
       tags: [validation]
 
-    - name: Display cluster configuration
-      debug:
-        msg: |
-          ========================================
-          k3s Controller Configuration
-          ========================================
-          Host: {{ inventory_hostname }} ({{ ansible_host }})
-          Role: {{ 'First Controller' if is_first_controller else 'Additional Controller' }}
-          k3s Version: {{ k3s_version }}
-          etcd Data Dir: {{ etcd_data_dir }}
-          Controller IPs: {{ controller_ips | join(', ') }}
-          ========================================
-
-  tasks:
-    - name: Resize root filesystem to use all available space
-      shell: |
-        echo "Resizing filesystem to use all available space..."
-        
-        # Find the root filesystem device
-        ROOT_DEV=$(df / | tail -1 | awk '{print $1}')
-        echo "Root device: $ROOT_DEV"
-        
-        # Extract the disk and partition number using sed instead of bash regex
-        DISK=$(echo $ROOT_DEV | sed 's/p[0-9]*$//')
-        PART_NUM=$(echo $ROOT_DEV | sed 's/.*p//')
-        echo "Disk: $DISK, Partition: $PART_NUM"
-        
-        # Resize the partition to use all available space
-        parted $DISK resizepart $PART_NUM 100%
-        
-        # Resize the filesystem to fill the partition
-        resize2fs $ROOT_DEV
-        
-        echo "Filesystem resize complete"
-      register: resize_result
-      changed_when: true
-      when: resize_rootfs | default(false)
-      tags: [filesystem, resize]
-
-    - name: Show filesystem resize result
-      debug:
-        var: resize_result.stdout_lines
-      when: resize_result.stdout_lines is defined and (resize_rootfs | default(false))
-      tags: [filesystem, resize]
-
-    - name: Check available disk space after resize
-      shell: df -h /
-      register: disk_usage
-      changed_when: false
-      when: resize_rootfs | default(false)
-      tags: [filesystem, resize]
-
     - name: Create k3s data directories
       file:
         path: "{{ item }}"
@@ -188,7 +130,10 @@
 
     - name: Download and install k3s (first controller - cluster init)
       shell: |
-        curl -sfL https://get.k3s.io | INSTALL_K3S_VERSION="{{ k3s_version }}" INSTALL_K3S_EXEC="--cluster-init --token {{ k3s_token | default(ansible_env.K3S_TOKEN) }} -disable=traefik" sh -
+        curl -sfL https://get.k3s.io | \
+        INSTALL_K3S_VERSION="{{ k3s_version }}" \
+        INSTALL_K3S_EXEC="server --cluster-init -disable=traefik --flannel-backend none" \
+        K3S_TOKEN="{{ k3s_token | default(ansible_env.K3S_TOKEN) }}" \
       when: (not k3s_installed.stat.exists or (replace_cluster_bool)) and is_first_controller and not (etcd_exists.stat.exists and not replace_cluster_bool)
       tags: [k3s, install]
 
@@ -203,12 +148,25 @@
 
     - name: Download and install k3s (additional controllers - join cluster)
       shell: |
-        curl -sfL https://get.k3s.io | INSTALL_K3S_VERSION="{{ k3s_version }}" INSTALL_K3S_EXEC="--server https://{{ hostvars[first_controller]['ansible_host'] }}:6443 --token {{ k3s_token | default(ansible_env.K3S_TOKEN) }}" sh -
+        curl -sfL https://get.k3s.io | \
+        INSTALL_K3S_VERSION="{{ k3s_version }}" \
+        INSTALL_K3S_EXEC="server -disable=traefik --flannel-backend none" \
+        K3S_TOKEN="{{ k3s_token | default(ansible_env.K3S_TOKEN) }}" \
+        K3S_URL=https://{{ hostvars[first_controller]['ansible_host'] }}:6443 sh -
       when: (not k3s_installed.stat.exists or (replace_cluster_bool)) and not is_first_controller and not (etcd_exists.stat.exists and not replace_cluster_bool)
       ignore_errors: yes
       register: k3s_install_result
       tags: [k3s, install]
 
+    - name: Configure k3s server
+      template:
+        src: k3s-server-config.yaml.j2
+        dest: /etc/rancher/k3s/config.yaml
+        owner: root
+        group: root
+        mode: '0644'
+      tags: [k3s, config]
+    
     - name: Deploy k3s systemd service
       template:
         src: k3s.service.j2
@@ -217,7 +175,7 @@
         group: root
         mode: '0644'
         backup: yes
-      when: not (etcd_exists.stat.exists and not replace_cluster_bool) and (not k3s_installed.stat.exists or replace_cluster_bool)
+      notify: Reload systemd
       tags: [k3s, systemd]
 
     - name: Start and enable k3s service
@@ -227,7 +185,6 @@
         enabled: yes
       ignore_errors: yes
       register: k3s_start_result
-      when: not (etcd_exists.stat.exists and not replace_cluster_bool)
       tags: [k3s, service]
 
     - name: Wait for k3s API to be ready
@@ -275,24 +232,6 @@
       delegate_to: localhost
       become: false
       run_once: true
-    
-    - name: Display HA setup reminder
-      debug:
-        msg: |
-          ========================================
-          High Availability Setup Reminder
-          ========================================
-          Kubeconfig created with primary controller: {{ ansible_default_ipv4.address }}
-          
-          For true HA, consider:
-          1. Set up a load balancer (HAProxy, nginx, etc.)
-          2. Point kubeconfig to load balancer IP
-          3. Configure load balancer to distribute across controllers
-          
-          Current controllers: {{ controller_ips | join(', ') }}
-          ========================================
-      when: is_first_controller
-      tags: [k3s, kubeconfig, ha]
 
     - name: Add ArgoCD Helm repository
       kubernetes.core.helm_repository:
@@ -356,3 +295,8 @@
       systemd:
         name: k3s
         state: restarted
+
+    - name: Reload systemd
+      systemd:
+        daemon_reload: yes
+
