--- a/ansible/inventory/inventory.ini
+++ b/ansible/inventory/inventory.ini
@@ -6,6 +6,10 @@ rpi4-0 ansible_host=10.100.20.12
 [agents]
 rpi3-0 ansible_host=10.100.20.13
 
+[rpi5-hosts]
+rpi5-0
+rpi5-1
+
 [rpi:children]
 controllers
 agents
