--- a/ansible/playbooks/infrastructure/post-k3s.yml
+++ b/ansible/playbooks/infrastructure/post-k3s.yml
@@ -11,6 +11,8 @@
       - "longhorn:NoSchedule"
     longhorn_labels:
       - "longhorn-storage=true"
+    rpi5_labels:
+      - "rpi5-host=true"
     flannel_taints:
       - "flannel.io/required=true:NoSchedule"
 
@@ -38,12 +40,13 @@
 
   tasks:
     # STORAGE LABELS
-    - name: Add longhorn-storage label to storage nodes
+    - name: Add longhorn-storage labels to storage nodes
       shell: |
-        kubectl label node {{ inventory_hostname }} longhorn-storage=true --overwrite
+        kubectl label node {{ inventory_hostname }} {{ item }} --overwrite
       delegate_to: localhost
       become: no
       when: inventory_hostname in (groups['storage'] | default([]))
+      loop: "{{ longhorn_labels }}"
       tags: [k3s, labels, longhorn, storage]
 
     - name: Remove Longhorn storage labels from node
@@ -80,7 +83,7 @@
       delegate_to: localhost
       become: no
       when: inventory_hostname in (groups['storage_only'] | default([]))
-      loop: "{{ longhorn_taints }}"
+      loop: "{{ flannel_taints }}"
       tags: [k3s, taints]
   
     - name: Remove flannel taints from nodes not in the "storage_only" group
@@ -89,5 +92,23 @@
       delegate_to: localhost
       become: no
       when: inventory_hostname not in (groups['storage_only'] | default([]))
-      loop: "{{ longhorn_taints }}"
+      loop: "{{ flannel_taints }}"
       tags: [k3s, taints]
+
+    - name: Add rpi5 hosts labels to rpi5 hosts
+      shell: |
+        kubectl label node {{ inventory_hostname }} {{ item }} --overwrite
+      delegate_to: localhost
+      become: no
+      when: inventory_hostname in (groups['rpi5-hosts'] | default([]))
+      loop: "{{ rpi5_labels }}"
+      tags: [k3s, labels]
+
+    - name: Remove rpi5 hosts label from non-rpi5 hosts
+      shell: |
+        kubectl label node {{ inventory_hostname }} {{ item.split('=')[0] }}- || true
+      delegate_to: localhost
+      become: no
+      when: inventory_hostname not in (groups['rpi5-hosts'] | default([]))
+      loop: "{{ rpi5_labels }}"
+      tags: [k3s, labels]
