--- a/gitops/apps/home-assistant/automations/alex_reolink_human_detect_alert.yaml
+++ b/gitops/apps/home-assistant/automations/alex_reolink_human_detect_alert.yaml
@@ -3,9 +3,9 @@ mode: queued
 triggers:
   - trigger: state
     entity_id:
-      - binary_sensor.living_room_cam_person
-      - binary_sensor.bedroom_cam_person
-      - binary_sensor.kitchen_cam_person
+      - binary_sensor.living_room_person
+      - binary_sensor.bedroom_person
+      - binary_sensor.kitchen_person
     from: "off"
     to: "on"
 conditions:
@@ -18,11 +18,11 @@ variables:
   CAM_MAP: >
     {{
       {
-        'binary_sensor.living_room_cam_person':
+        'binary_sensor.living_room_person':
           {'camera': 'camera.living_room_cam','room':'Living Room','slug':'living_room'},
-        'binary_sensor.bedroom_cam_person':
+        'binary_sensor.bedroom_person':
           {'camera': 'camera.bedroom_cam',    'room':'Bedroom',    'slug':'bedroom'},
-        'binary_sensor.kitchen_cam_person':
+        'binary_sensor.kitchen_person':
           {'camera': 'camera.kitchen_cam',    'room':'Kitchen',    'slug':'kitchen'}
       }
     }}
