--- a/gitops/apps/home-assistant/automations/alex_reolink_pet_detect_snapshot.yaml
+++ b/gitops/apps/home-assistant/automations/alex_reolink_pet_detect_snapshot.yaml
@@ -3,9 +3,9 @@ mode: queued
 triggers:
   - trigger: state
     entity_id:
-      - binary_sensor.living_room_cam_pet
-      - binary_sensor.bedroom_cam_pet
-      - binary_sensor.kitchen_cam_pet
+      - binary_sensor.living_room_animal
+      - binary_sensor.bedroom_animal
+      - binary_sensor.kitchen_animal
     from: "off"
     to: "on"
 conditions:
@@ -18,11 +18,11 @@ variables:
   CAM_MAP: >
     {{
       {
-        'binary_sensor.living_room_cam_pet':
+        'binary_sensor.living_room_animal':
           {'camera': 'camera.living_room_cam', 'room':'Living Room','slug':'living_room'},
-        'binary_sensor.bedroom_cam_pet':
+        'binary_sensor.bedroom_animal':
           {'camera': 'camera.bedroom_cam',     'room':'Bedroom',    'slug':'bedroom'},
-        'binary_sensor.kitchen_cam_pet':
+        'binary_sensor.kitchen_animal':
           {'camera': 'camera.kitchen_cam',     'room':'Kitchen',    'slug':'kitchen'}
       }
     }}
