--- a/gitops/apps/home-assistant/automations/alex_reolink_human_detect_alert.yaml
+++ b/gitops/apps/home-assistant/automations/alex_reolink_human_detect_alert.yaml
@@ -5,7 +5,6 @@ triggers:
     entity_id:
       - binary_sensor.living_room_person
       - binary_sensor.bedroom_person
-      - binary_sensor.kitchen_person
     from: "off"
     to: "on"
 conditions:
@@ -19,11 +18,9 @@ variables:
     {{
       {
         'binary_sensor.living_room_person':
-          {'camera': 'camera.living_room_cam','room':'Living Room','slug':'living_room'},
+          {'camera': 'camera.living_room_fluent','room':'Living Room','slug':'living_room'},
         'binary_sensor.bedroom_person':
-          {'camera': 'camera.bedroom_cam',    'room':'Bedroom',    'slug':'bedroom'},
-        'binary_sensor.kitchen_person':
-          {'camera': 'camera.kitchen_cam',    'room':'Kitchen',    'slug':'kitchen'}
+          {'camera': 'camera.bedroom_fluent',    'room':'Bedroom',    'slug':'bedroom'}
       }
     }}
   cam: "{{ CAM_MAP[trigger.entity_id]['camera'] }}"
